--- a/purescript.cabal
+++ b/purescript.cabal
@@ -211,6 +211,7 @@ library
                      Language.PureScript.Ide.SourceFile
                      Language.PureScript.Ide.Watcher
                      Language.PureScript.Ide.Reexports
+                     Language.PureScript.Ide.Imports
 
                      Control.Monad.Logger
                      Control.Monad.Supply
