--- a/purescript.cabal
+++ b/purescript.cabal
@@ -455,6 +455,7 @@ test-suite tests
                    TestPscIde
                    PscIdeSpec
                    Language.PureScript.Ide.Test
+                   Language.PureScript.Ide.CompletionSpec
                    Language.PureScript.Ide.FilterSpec
                    Language.PureScript.Ide.ImportsSpec
                    Language.PureScript.Ide.MatcherSpec
