--- a/package.yaml
+++ b/package.yaml
@@ -86,6 +86,7 @@ dependencies:
   - unordered-containers
   - utf8-string >=1 && <2
   - vector
+  - vector-algorithms
 
 library:
   source-dirs: src
